--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
+    "dev": "NODE_ENV=development node node_modules/sails/bin/sails lift --debug",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
